# surface-discovery-poc

./: .dockerignore  .envrc  .envrc.example  .eslintrc.json  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  TODO.md  TROUBLESHOOTING.md  cli.py  docker-compose.yml  docker-entrypoint.sh  pnpm-lock.yaml  pyproject.toml  requirements.txt  resume.cfg  test-docker-improved.sh  test-docker.sh  tsconfig.json  validate-docker.sh
.serena/: project.yml
.serena/memories/: agent_migration_plan_2025-01-05.md  build-fix-analysis-complete.md  migration-complete-2025-11-07.md  node-migration-technical-decisions.md  nuclei_integration_patterns.md  plan-port-scanning-hypothesis.md  project_architecture_decisions.md  project_context_surface-discovery.md  session_2025-01-07_node-migration-progress.md  session_2025-11-05_surface-discovery-implementation.md  session_2025-11-05_vulnerability-scan-toggle.md  (+10 more)
discovery/: __init__.py  config.py  core.py
docs/: AGENT_FRAMEWORK_SUMMARY.md  AGENT_MIGRATION_PLAN.md  AGENT_QUICKSTART.md  AUTHENTICATED_SCAN.md  DOCKER.md  DOCKER_QUICKREF.md  INSTALLATION.md  PHASE_0_IMPLEMENTATION_STATUS.md  PHASE_0_QUICKSTART.md  QUICKSTART.md  SETUP.md
examples/: demo_targets.txt  example_output.json
node-implementation/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  QUICK_START.md  README.md  docker-compose.yml  package.json  tsconfig.test.json
scripts/: clean.sh  install-tools.sh
src/: cli.ts  config.ts  core.ts  index.ts
tests/: test_basic.py
(+58 files in other folders)
