[project]
name = "surface-discovery"
version = "0.1.0"
description = "Advanced domain discovery and reconnaissance tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",

    # DNS and network operations
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",

    # Async operations
    "asyncio-throttle>=1.0.0",

    # Deep URL Discovery (Phase 0)
    "playwright>=1.40.0",

    # Utilities
    "python-dateutil>=2.8.0",
    "tldextract>=5.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
surface-discovery = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["discovery"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]
